processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__fast__tests__all_ops__test_basic_block__stack_inputs_07_vec__Felt__from_u32_1__Felt__from_u32_2__Felt__from_u32_3__Felt___operations_65_vec__Operation__HPerm_.snap
---
source: processor/src/fast/tests/all_ops.rs
assertion_line: 135
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            671991757919180502,
            12466007527255172286,
            4466077373719406959,
            16551433650283727430,
            5318845950311173892,
            6815018521920641786,
            9368097095824314056,
            17735685170104324865,
            15006790259484023058,
            1857099212867630968,
            16412552972317651415,
            1496105740998126279,
            0,
            0,
            0,
            0,
        ],
    },
)
